@@ -1,3 +1,10 @@
+2002-02-06  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/scan.test:
+	* generic/tclScan.c (Tcl_ScanObjCmd): corrected scan 0x... %x
+	handling that didn't accept the 0x as a prelude to a base 16
+	number.  [Bug #495213]
+
 2002-02-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* unix/tclUnixChan.c (FileOutputProc): Fixed [bug 465765] reported
